--- a/sass/nexter/_slider.scss
+++ b/sass/nexter/_slider.scss
@@ -1,6 +1,5 @@
 .slider {
-
-  height: 70rem;  
+  max-height: 58rem;
   grid-column: full-start / full-end;
   grid-template-columns: 5rem auto 5rem;
   grid-template-rows: 8rem 21rem 8rem 21rem;
@@ -35,9 +34,15 @@
   font-size: 3rem;
   z-index: 1;
   display: inline-block;
-  transform: translateY(-35rem);
   width: 6rem;
   height: 6rem;
+  position: relative;
+  transform: translateY(-27rem);
+
+  @media only screen and (max-width: $bp-largest) {
+    transform: translateY(-41rem);
+  }
+
 } 
 
 .prev:hover,
